# qmk_cli

./: .bumpversion.cfg  .flake8  .gitignore  Dockerfile  ISSUE_TEMPLATE.md  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  ci_tests  gpg_pubkey.txt  milc.py  pyproject.toml  qmk  release  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_msys.sh  trigger_packages
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  feature_request.md  other_issues.md
.github/workflows/: cli_lint.yml  cli_setup.yml  codeql-analysis.yml  docker-pr.yml  docker-republish.yml  python-publish.yml  setup_and_doctor.yml
debian/: copyright
qmk_cli/: __init__.py  doctor.py  git.py  helpers.py  script_qmk.py  switch_to_venv.py
qmk_cli/subcommands/: __init__.py  clone.py  console.py  doctor.py  env.py  pip.py  setup.py  userspace.py
test/: conftest.py  test_ci.py  test_git.py  test_helpers.py
test/subcommands/: test_clone.py  test_env.py  test_setup.py
