#[build-system]
# Use setuptools for now until this PR is merged and available in homebrew:
#
#     https://github.com/pypa/pip/pull/6606
#
# We still pull our build metadata from this file so we can easily go back to flit.
#
#requires = ["flit"]
#build-backend = "flit.buildapi"

[tool.flit.metadata]
dist-name = "qmk"
module = "qmk_cli"
author = "skullydazed"
author-email = "skullydazed@gmail.com"
description-file = "README.md"
home-page = "https://github.com/qmk/qmk_cli"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development',
    'Topic :: Utilities',
]
requires-python = ">=3.5"
requires = [
    #"milc", #FIXME(skullydazed): Included in the repo for now.
    "argcomplete",
    "colorama",
    #"halo"
]

[tool.flit.scripts]
qmk = "qmk_cli.script_qmk:main"
