#[bumpversion]
# Bumpversion config has been moved to .bumpversion.cfg

[bdist_wheel]
universal = 1

[flake8]
ignore = E501,E226

[metadata]
name = qmk
version = 1.1.6
author = skullydazed
author_email = skullydazed@gmail.com
description = A program to help users work with QMK Firmware.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
project_urls =
	Bug Tracker = https://github.com/qmk/qmk_cli/issues
	Documentation = https://docs.qmk.fm/#/cli
	Homepage = https://qmk.fm/
	Source = https://github.com/qmk/qmk_cli/
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering
	Topic :: Software Development
	Topic :: Utilities

[options]
install_requires =
	hid
	milc>=1.9.0
	pyusb
	setuptools>=45
	# qmk_firmware packages
	dotty-dict
	hjson
	jsonschema>=4
	pillow
	pygments
	pyserial
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
	qmk = qmk_cli.script_qmk:main

[yapf]
align_closing_bracket_with_visual_indent = True
allow_multiline_dictionary_keys = False
allow_multiline_lambdas = False
allow_split_before_default_or_named_assigns = True
allow_split_before_dict_value = True
arithmetic_precedence_indication = True
blank_lines_around_top_level_definition = 2
blank_line_before_class_docstring = False
blank_line_before_module_docstring = False
blank_line_before_nested_class_or_def = False
coalesce_brackets = True
column_limit = 256
continuation_align_style = SPACE
continuation_indent_width = 4
dedent_closing_brackets = True
disable_ending_comma_heuristic = False
each_dict_entry_on_separate_line = True
i18n_comment =
i18n_function_call =
indent_blank_lines = False
indent_dictionary_value = True
indent_width = 4
join_multiple_lines = False
no_spaces_around_selected_binary_operators =
spaces_around_default_or_named_assign = False
spaces_around_power_operator = False
spaces_before_comment = 2
space_between_ending_comma_and_closing_bracket = False
split_all_comma_separated_values = False
split_arguments_when_comma_terminated = True
split_before_arithmetic_operator = False
split_before_bitwise_operator = True
split_before_closing_bracket = True
split_before_dict_set_generator = True
split_before_dot = False
split_before_expression_after_opening_paren = False
split_before_first_argument = False
split_before_logical_operator = False
split_before_named_assigns = True
split_complex_comprehension = True
split_penalty_after_opening_bracket = 300
split_penalty_after_unary_operator = 10000
split_penalty_arithmetic_operator = 300
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = False
